cmake_minimum_required(VERSION 3.9)
project(leetcode_algorithms)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode_algorithms
        "001. Two Sum/1.py"
        "124. Binary Tree Maximum Path Sum/Solution.cpp"
        "128. Longest Consecutive Sequence/Solution.cpp" "152. Maximum Product Subarray/152.cpp" "155. Min Stack/155.cpp" "160. Intersection of Two Linked Lists/160.cpp")
